--- a/customize.yaml
+++ b/customize.yaml
@@ -6,6 +6,10 @@ media_player.braviatv_1:
 media_player.mopidy:
   homebridge_name: Lautsprecher
   homebridge_media_player_switch: on_off
+media_player.mpd:
+  friendly_name: MPD
+  homebridge_name: Lautsprecher
+  homebridge_media_player_switch: on_off
 #media_player.braviatv_2:
 #  friendly_name: !secret tv_tv2_name
 #  homebridge_name: !secret tv_tv2_hbname
@@ -135,6 +139,10 @@ sensor.fail2ban_sshd:
 #  homebridge_hidden: true
 
 ###Switches
+switch.mpd:
+  homebridge_hidden: true
+  icon: mdi:music-box
+  friendly_name: MPD
 switch.mopidy:
   homebridge_hidden: true
   icon: mdi:music-box
@@ -145,6 +153,11 @@ switch.wind_machine:
   friendly_name: Ventilator
 switch.braviatv_1:
   friendly_name: !secret tv_tv1_name
+  homebridge_hidden: true
+switch.playstation_4:
+  homebridge_hidden: true
+  icon: mdi:playstation
+  friendly_name: Playstation 4
 #switch.braviatv_2:
 #  friendly_name: !secret tv_tv2_name
 
