--- a/recorder_exclude.yaml
+++ b/recorder_exclude.yaml
@@ -1,7 +1,92 @@
 entities:
   - sensor.time
   - sensor.date
+  - sensor.season
+  - sensor.sonoff_maddox_version
+  - sensor.sonoff_3028_version
+  - sensor.wakeup_alarm_time
+  - sensor.wakeup_fadein_duration
+  - sensor.wakeup_start_time_lights
   - automation.automatic_theme_change
+  - sensor.dark_sky_daily_high_temperature_1
+  - sensor.dark_sky_daily_high_temperature_2
+  - sensor.dark_sky_daily_high_temperature_3
+  - sensor.dark_sky_daily_high_temperature_4
+  - sensor.dark_sky_daily_high_temperature_5
+  - sensor.dark_sky_daily_high_temperature_6
+  - sensor.dark_sky_daily_high_temperature_7
+  - sensor.dark_sky_daily_low_temperature_1
+  - sensor.dark_sky_daily_low_temperature_2
+  - sensor.dark_sky_daily_low_temperature_3
+  - sensor.dark_sky_daily_low_temperature_4
+  - sensor.dark_sky_daily_low_temperature_5
+  - sensor.dark_sky_daily_low_temperature_6
+  - sensor.dark_sky_daily_low_temperature_7
+  - sensor.dark_sky_daily_max_precip_intensity_1
+  - sensor.dark_sky_daily_max_precip_intensity_2
+  - sensor.dark_sky_daily_max_precip_intensity_3
+  - sensor.dark_sky_daily_max_precip_intensity_4
+  - sensor.dark_sky_daily_max_precip_intensity_5
+  - sensor.dark_sky_daily_max_precip_intensity_6
+  - sensor.dark_sky_daily_max_precip_intensity_7
+  - sensor.dark_sky_dew_point_1
+  - sensor.dark_sky_dew_point_2
+  - sensor.dark_sky_dew_point_3
+  - sensor.dark_sky_dew_point_4
+  - sensor.dark_sky_dew_point_5
+  - sensor.dark_sky_dew_point_6
+  - sensor.dark_sky_dew_point_7
+  - sensor.dark_sky_humidity_1
+  - sensor.dark_sky_humidity_2
+  - sensor.dark_sky_humidity_3
+  - sensor.dark_sky_humidity_4
+  - sensor.dark_sky_humidity_5
+  - sensor.dark_sky_humidity_6
+  - sensor.dark_sky_humidity_7
+  - sensor.dark_sky_icon
+  - sensor.dark_sky_icon_1
+  - sensor.dark_sky_icon_2
+  - sensor.dark_sky_icon_3
+  - sensor.dark_sky_icon_4
+  - sensor.dark_sky_icon_5
+  - sensor.dark_sky_icon_6
+  - sensor.dark_sky_icon_7
+  - sensor.dark_sky_precip_intensity_1
+  - sensor.dark_sky_precip_intensity_2
+  - sensor.dark_sky_precip_intensity_3
+  - sensor.dark_sky_precip_intensity_4
+  - sensor.dark_sky_precip_intensity_5
+  - sensor.dark_sky_precip_intensity_6
+  - sensor.dark_sky_precip_intensity_7
+  - sensor.dark_sky_precip_probability_1
+  - sensor.dark_sky_precip_probability_2
+  - sensor.dark_sky_precip_probability_3
+  - sensor.dark_sky_precip_probability_4
+  - sensor.dark_sky_precip_probability_5
+  - sensor.dark_sky_precip_probability_6
+  - sensor.dark_sky_precip_probability_7
+  - sensor.dark_sky_uv_index_1
+  - sensor.dark_sky_uv_index_2
+  - sensor.dark_sky_uv_index_3
+  - sensor.dark_sky_uv_index_4
+  - sensor.dark_sky_uv_index_5
+  - sensor.dark_sky_uv_index_6
+  - sensor.dark_sky_uv_index_7
+  - sensor.dark_sky_wind_speed_1
+  - sensor.dark_sky_wind_speed_2
+  - sensor.dark_sky_wind_speed_3
+  - sensor.dark_sky_wind_speed_4
+  - sensor.dark_sky_wind_speed_5
+  - sensor.dark_sky_wind_speed_6
+  - sensor.dark_sky_wind_speed_7
+  - sensor.forecast_1
+  - sensor.forecast_2
+  - sensor.forecast_3
+  - sensor.forecast_4
+  - sensor.forecast_5
+  - sensor.forecast_6
+  - sensor.forecast_7
+  - sensor.forecast_today
   #- sensor.ssl_cert_expiry
   #- sensor.dark_sky_summary
   #- sensor.wakeup_start_time_lights
