--- a/switch.yaml
+++ b/switch.yaml
@@ -6,12 +6,59 @@
   payload_on: "ON"
   payload_off: "OFF"
   retain: true
-- platform: mpdsmall
-  name: Mopidy
-  host: !secret host_ip
-- platform: braviasmall
-  name: braviatv_1
-  host: !secret tv_tv1_ip
+- platform: template
+  switches:
+    braviatv_1:
+      value_template: "{{ is_state('media_player.braviatv_1', 'on')}}"
+      turn_on:
+        service: media_player.turn_on
+        data:
+          entity_id: media_player.braviatv_1
+      turn_off:
+        service: media_player.turn_off
+        data:
+          entity_id: media_player.braviatv_1
+    #mopidy:
+    #  value_template: "{{ is_state('media_player.mopidy', 'playing')}}"
+    #  turn_on:
+    #    service: media_player.turn_on
+    #    data:
+    #      entity_id: media_player.mopidy
+    #  turn_off:
+    #    service: media_player.turn_off
+    #    data:
+    #      entity_id: media_player.mopidy
+    mpd:
+      value_template: "{{ is_state('media_player.mpd', 'playing')}}"
+      turn_on:
+        service: media_player.turn_on
+        data:
+          entity_id: media_player.mpd
+      turn_off:
+        service: media_player.turn_off
+        data:
+          entity_id: media_player.mpd
+    playstation_4:
+      value_template: >
+        {% if is_state('media_player.playstation_4', 'off') %}
+         False
+        {% else %}
+         True
+        {% endif %}
+      turn_on:
+        service: media_player.turn_on
+        data:
+          entity_id: media_player.playstation_4
+      turn_off:
+        service: media_player.turn_off
+        data:
+          entity_id: media_player.playstation_4
+#- platform: mpdsmall
+#  name: Mopidy
+#  host: !secret host_ip
+#- platform: braviasmall
+#  name: braviatv_1
+#  host: !secret tv_tv1_ip
 #- platform: braviasmall
 #  name: braviatv_2
 #  host: !secret tv_tv2_ip
