--- a/switch.yaml
+++ b/switch.yaml
@@ -18,6 +18,16 @@
         service: media_player.turn_off
         data:
           entity_id: media_player.braviatv_1
+    braviatv_2:
+      value_template: "{{ is_state('media_player.braviatv_2', 'on')}}"
+      turn_on:
+        service: media_player.turn_on
+        data:
+          entity_id: media_player.braviatv_2
+      turn_off:
+        service: media_player.turn_off
+        data:
+          entity_id: media_player.braviatv_2
     #mopidy:
     #  value_template: "{{ is_state('media_player.mopidy', 'playing')}}"
     #  turn_on:
