--- a/weblink.yaml
+++ b/weblink.yaml
@@ -3,8 +3,8 @@ entities:
     url: !secret router_url
   - name: Powerline
     url: !secret powerline_url
-  - name: Moped
-    url: !secret moped_url
+  - name: ympd
+    url: !secret ympd_url
   - name: !secret rpist_nm
     url: !secret rpist_url
   - name: !secret mbpst_nm
