--- a/automations.yaml
+++ b/automations.yaml
@@ -193,10 +193,16 @@
     condition: template
     value_template: '{{ states.input_select.hue_scenes.state != "none" }}'
   action:
-    service: hue.hue_activate_scene
+  - service: hue.hue_activate_scene
     data_template:
       group_name: Zimmer
       scene_name: '{{ trigger.to_state.state }}'
+  - delay:
+      seconds: 3
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.hue_scenes
+      option: "none"
 
 - alias: Random light
   id: '33223'
@@ -210,7 +216,7 @@
     state: 'on'
   action:
     service: light.turn_on
-    entity_id: light.zimmer
+    entity_id: light.deckenspots
     data:
       effect: random
       transition: 5
@@ -288,3 +294,21 @@
 #    data:
 #      title: Update available
 #      message: A new version for [Tiles custom state card](https://github.com/c727/home-assistant-tiles#changelog) is available.
+
+- alias: Random light - Stehlampe
+  id: '20180513163100'
+  trigger:
+    platform: time
+    minutes: /2
+    seconds: 0
+  condition:
+    condition: state
+    entity_id: input_boolean.loop_livingcolors_stehlampe
+    state: 'on'
+  action:
+    service: light.turn_on
+    entity_id: light.zimmer
+    data:
+      effect: random
+      transition: 5
+      brightness: 132
