--- a/input_boolean.yaml
+++ b/input_boolean.yaml
@@ -1,8 +1,11 @@
 fan_living_room:
   name: fan_living_room
   initial: off
-loop_livingcolors:
+loop_livingcolors_1:
   name: Loop LivingColors
+  initial: off
+loop_livingcolors_2:
+  name: Loop LivingColors Stehlampe
   initial: off
 #weather:
   
