--- a/input_datetime.yaml
+++ b/input_datetime.yaml
@@ -3,3 +3,8 @@ time_turnoff_devices:
   has_date: false
   has_time: true
   initial: '01:00'
+wakeup_alarm_time:
+  name: Alarm
+  has_date: false
+  has_time: true
+  initial: '06:30'
