--- a/old_packages/alarmclock.yaml
+++ b/old_packages/alarmclock.yaml
@@ -8,11 +8,12 @@ group:
     name: Aufwachbeleuchtung
     control: hidden
     entities:
-      - sensor.wakeup_alarm_time
+      #- sensor.wakeup_alarm_time
       - sensor.wakeup_start_time_lights
-      - sensor.wakeup_fadein_duration
-      - input_number.wakeup_hour
-      - input_number.wakeup_minutes
+      #- sensor.wakeup_fadein_duration
+      #- input_number.wakeup_hour
+      #- input_number.wakeup_minutes
+      - input_datetime.wakeup_alarm_time
       - input_number.wakeup_duration
       - input_boolean.wakeup
       - input_boolean.wakeup_weekends
@@ -29,21 +30,21 @@ input_boolean:
     initial: off
 
 input_number:
-  wakeup_hour:
-    name: Stunde
-    icon: mdi:clock-in
-    initial: 6
-    min: 0
-    max: 23
-    step: 1
+  #wakeup_hour:
+  #  name: Stunde
+  #  icon: mdi:clock-in
+  #  initial: 6
+  #  min: 0
+  #  max: 23
+  #  step: 1
 
-  wakeup_minutes:
-    name: Minuten
-    icon: mdi:clock-in
-    initial: 30
-    min: 0
-    max: 55
-    step: 5
+  #wakeup_minutes:
+  #  name: Minuten
+  #  icon: mdi:clock-in
+  #  initial: 30
+  #  min: 0
+  #  max: 55
+  #  step: 5
 
   wakeup_duration:
     name: Fade-in
@@ -54,19 +55,19 @@ input_number:
     step: 5
 
 sensor:
-  - platform: template
-    sensors:
-      wakeup_alarm_time:
-        friendly_name: 'Alarm'
-        value_template: '{% if states.input_number.wakeup_hour.state|length == 3 %}0{% endif %}{{ states.input_number.wakeup_hour.state | int }}:{% if states.input_number.wakeup_minutes.state|length == 3 %}0{% endif %}{{ states.input_number.wakeup_minutes.state | int }}'
+  #- platform: template
+  #  sensors:
+  #    wakeup_alarm_time:
+  #      friendly_name: 'Alarm'
+  #      value_template: '{% if states.input_number.wakeup_hour.state|length == 3 %}0{% endif %}{{ states.input_number.wakeup_hour.state | int }}:{% if states.input_number.wakeup_minutes.state|length == 3 %}0{% endif %}{{ states.input_number.wakeup_minutes.state | int }}'
 
   - platform: template
     sensors:
       wakeup_start_time_lights:
         friendly_name: 'Fade-in Startzeit'
         value_template: >
-          {% if states.sensor.wakeup_alarm_time and states.input_number.wakeup_duration %}
-          {% set alarmtime = states.sensor.wakeup_alarm_time.state %}
+          {% if states.input_datetime.wakeup_alarm_time and states.input_number.wakeup_duration %}
+          {% set alarmtime = states.input_datetime.wakeup_alarm_time.state %}
           {% set alarm_hour = alarmtime.split(":")[0] | int %}
           {% set alarm_min = alarmtime.split(":")[1] | int %}
           {% set light_dur = states.input_number.wakeup_duration.state | int %}
@@ -81,9 +82,9 @@ sensor:
           {% endif %}
           {% endif %}
 
-  - platform: template
-    sensors:
-      wakeup_fadein_duration:
-        friendly_name: 'Fade-in Dauer'
-        value_template: '{{ states.input_number.wakeup_duration.state | int }}'
-        unit_of_measurement: 'min'
+  #- platform: template
+  #  sensors:
+  #    wakeup_fadein_duration:
+  #      friendly_name: 'Fade-in Dauer'
+  #      value_template: '{{ states.input_number.wakeup_duration.state | int }}'
+  #      unit_of_measurement: 'min'
