--- a/packages/weather.yaml
+++ b/packages/weather.yaml
@@ -35,9 +35,9 @@ homeassistant:
       icon: mdi:water-percent
     sensor.dark_sky_temperature:
       friendly_name: Temperatur
-    sensor.dark_sky_temperature_min:
+    sensor.dark_sky_temperature_low:
       friendly_name: Temperatur - min
-    sensor.dark_sky_temperature_max:
+    sensor.dark_sky_temperature_high:
       friendly_name: Temperatur - max
     sensor.dark_sky_precip_type:
       friendly_name: Niederschlagsart
@@ -162,8 +162,8 @@ sensor:
       - uv_index
       - wind_speed
       - humidity
-      - temperature_min
-      - temperature_max
+      - temperature_low
+      - temperature_high
       - precip_intensity_max
 
   - platform: season
@@ -173,14 +173,14 @@ sensor:
       forecast_today:
         friendly_name: "Vorhersage"
         value_template: >
-          {{states.sensor.dark_sky_daily_high_temperature.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability.state|round(0)}}%
+          {{states.sensor.dark_sky_daytime_high_temperature.state|round(0)}}°/{{states.sensor.dark_sky_overnight_low_temperature.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability.state|round(0)}}%
         entity_picture_template: >-
             {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon.state ~ '.svg'}}
 
       forecast_1:
         friendly_name: 'Tomorrow'
         value_template: >
-          {{states.sensor.dark_sky_daily_high_temperature_1.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_1.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_1.state|round(0)}}%
+          {{states.sensor.dark_sky_daytime_high_temperature_1.state|round(0)}}°/{{states.sensor.dark_sky_overnight_low_temperature_1.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_1.state|round(0)}}%
         entity_picture_template: >-
             {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_1.state ~ '.svg'}}
 
@@ -189,7 +189,7 @@ sensor:
             {%- set date = as_timestamp(now()) + (2 * 86400 ) -%}
             {{ date | timestamp_custom("%A (%-m/%-d)") }}
         value_template: >
-          {{states.sensor.dark_sky_daily_high_temperature_2.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_2.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_2.state|round(0)}}%
+          {{states.sensor.dark_sky_daytime_high_temperature_2.state|round(0)}}°/{{states.sensor.dark_sky_overnight_low_temperature_2.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_2.state|round(0)}}%
         entity_picture_template: >-
             {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_2.state ~ '.svg'}}
 
@@ -198,7 +198,7 @@ sensor:
             {%- set date = as_timestamp(now()) + (3 * 86400 ) -%}
             {{ date | timestamp_custom("%A (%-m/%-d)") }}
         value_template: >
-          {{states.sensor.dark_sky_daily_high_temperature_3.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_3.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_3.state|round(0)}}%
+          {{states.sensor.dark_sky_daytime_high_temperature_3.state|round(0)}}°/{{states.sensor.dark_sky_overnight_low_temperature_3.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_3.state|round(0)}}%
         entity_picture_template: >-
             {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_3.state ~ '.svg'}}
 
@@ -207,7 +207,7 @@ sensor:
             {%- set date = as_timestamp(now()) + (4 * 86400 ) -%}
             {{ date | timestamp_custom("%A (%-m/%-d)") }}
         value_template: >
-          {{states.sensor.dark_sky_daily_high_temperature_4.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_4.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_4.state|round(0)}}%
+          {{states.sensor.dark_sky_daytime_high_temperature_4.state|round(0)}}°/{{states.sensor.dark_sky_overnight_low_temperature_4.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_4.state|round(0)}}%
         entity_picture_template: >-
             {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_4.state ~ '.svg'}}
 
@@ -216,7 +216,7 @@ sensor:
             {%- set date = as_timestamp(now()) + (5 * 86400 ) -%}
             {{ date | timestamp_custom("%A (%-m/%-d)") }}
         value_template: >
-          {{states.sensor.dark_sky_daily_high_temperature_5.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_5.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_5.state|round(0)}}%
+          {{states.sensor.dark_sky_daytime_high_temperature_5.state|round(0)}}°/{{states.sensor.dark_sky_overnight_low_temperature_5.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_5.state|round(0)}}%
         entity_picture_template: >-
             {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_5.state ~ '.svg'}}
 
@@ -225,7 +225,7 @@ sensor:
             {%- set date = as_timestamp(now()) + (6 * 86400 ) -%}
             {{ date | timestamp_custom("%A (%-m/%-d)") }}
         value_template: >
-            {{states.sensor.dark_sky_daily_high_temperature_6.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_6.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_6.state|round(0)}}%
+            {{states.sensor.dark_sky_daytime_high_temperature_6.state|round(0)}}°/{{states.sensor.dark_sky_overnight_low_temperature_6.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_6.state|round(0)}}%
         entity_picture_template: >-
             {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_6.state ~ '.svg'}}
 
@@ -234,6 +234,6 @@ sensor:
             {%- set date = as_timestamp(now()) + (7 * 86400 ) -%}
             {{ date | timestamp_custom("%A (%-m/%-d)") }}
         value_template: >
-            {{states.sensor.dark_sky_daily_high_temperature_7.state|round(0)}}°/{{states.sensor.dark_sky_daily_low_temperature_7.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_7.state|round(0)}}%
+            {{states.sensor.dark_sky_daytime_high_temperature_7.state|round(0)}}°/{{states.sensor.dark_sky_overnight_low_temperature_7.state|round(0)}}°/{{states.sensor.dark_sky_precip_probability_7.state|round(0)}}%
         entity_picture_template: >-
             {{ '/local/icons/weather/' ~ states.sensor.dark_sky_icon_7.state ~ '.svg'}}
