--- a/switch.yaml
+++ b/switch.yaml
@@ -1,11 +1,14 @@
 - platform: mqtt
   name: wind machine
-  command_topic: "cmnd/sonoff/power"
-  state_topic: "stat/sonoff/POWER"
+  command_topic: "cmnd/sonoff/POWER"
+  state_topic: "stat/sonoff/POWER1"
   qos: 1
   payload_on: "ON"
   payload_off: "OFF"
+  payload_available: "Online"
+  payload_not_available: "Offline"
   retain: true
+
 - platform: template
   switches:
     braviatv_1:
@@ -28,16 +31,6 @@
         service: media_player.turn_off
         data:
           entity_id: media_player.braviatv_2
-    #mopidy:
-    #  value_template: "{{ is_state('media_player.mopidy', 'playing')}}"
-    #  turn_on:
-    #    service: media_player.turn_on
-    #    data:
-    #      entity_id: media_player.mopidy
-    #  turn_off:
-    #    service: media_player.turn_off
-    #    data:
-    #      entity_id: media_player.mopidy
     mpd:
       value_template: "{{ is_state('media_player.mpd', 'playing')}}"
       turn_on:
@@ -63,19 +56,3 @@
         service: media_player.turn_off
         data:
           entity_id: media_player.playstation_4
-#- platform: mpdsmall
-#  name: Mopidy
-#  host: !secret host_ip
-#- platform: braviasmall
-#  name: braviatv_1
-#  host: !secret tv_tv1_ip
-#- platform: braviasmall
-#  name: braviatv_2
-#  host: !secret tv_tv2_ip
-#- platform: wake_on_lan
-#  name: braviatv_2
-#  mac_address: !secret tv_tv2_mac
-#  host: !secret tv_tv2_ip
-#  turn_off:
-#    service: media_player.turn_off
-#      - entity_id: media_player.braviatv_2
