--- a/customize.yaml
+++ b/customize.yaml
@@ -1,11 +1,47 @@
+### CUSTOMIZE ENTITIES ###
+
+###Binary sensors
+binary_sensor.workday_sensor:
+  homebridge_hidden: true
+
+###Input booleans
+input_boolean.fan_living_room:
+  homebridge_hidden: true
+
+###Input number
+
+###Input select
+input_select.log_level:
+  icon: mdi:note-text
+input_select.hue_scenes:
+  friendly_name: hue Szene
+  icon: mdi:spotlight
+
+####Lights
+light.buro:
+  friendly_name: Bürolicht
+  homebridge_hidden: true
+light.deckenspots:
+  friendly_name: Deckenspots
+  custom_ui_state_card: state-card-custom-light
+  homebridge_hidden: true
+light.stehlampe:
+  friendly_name: Stehlampe
+  custom_ui_state_card: state-card-custom-light
+  homebridge_hidden: true
+light.wohnzimmer:
+  friendly_name: Wohnzimmerlicht
+  homebridge_hidden: true
+light.zimmer:
+  friendly_name: Zimmerlicht
+  custom_ui_state_card: state-card-custom-light
+  homebridge_hidden: true
+
 ###Media players
 media_player.braviatv_1:
   friendly_name: !secret tv_tv1_name
   homebridge_name: Fernseher
   homebridge_media_player_switch: on_off
-#media_player.mopidy:
-#  homebridge_name: Lautsprecher
-#  homebridge_media_player_switch: on_off
 media_player.mpd:
   friendly_name: MPD
   homebridge_name: Lautsprecher
@@ -18,9 +54,84 @@ media_player.playstation_4:
   #homebridge_name: Spielkonsole
   homebridge_media_player_switch: on_off
 
-###Binary sensors
-binary_sensor.workday_sensor:
+###Scripts
+script.1515151540311:
+  can_cancel: false
+
+###System Sensors
+sensor.cpu_temperature:
+  friendly_name: CPU Temperatur
   homebridge_hidden: true
+sensor.database_size_hass:
+  friendly_name: Datenbankgröße HA
+  icon: mdi:database
+sensor.database_size_nc:
+  friendly_name: Datenbankgröße NC
+  icon: mdi:database
+sensor.disk_free_:
+  friendly_name: HDD
+  homebridge_hidden: true
+sensor.disk_use_percent_:
+  friendly_name: HDD
+  homebridge_hidden: true
+sensor.hass_version:
+  friendly_name: HA-Version
+sensor.memory_use_percent:
+  friendly_name: RAM
+  icon: mdi:memory
+  homebridge_hidden: true
+sensor.network_in_eth0:
+  friendly_name: Download
+  icon: mdi:download-network
+  homebridge_hidden: true
+sensor.network_out_eth0:
+  friendly_name: Upload
+  icon: mdi:upload-network
+  homebridge_hidden: true
+sensor.processor_use:
+  friendly_name: CPU
+  icon: mdi:desktop-classic
+  homebridge_hidden: true
+sensor.speedtest_download:
+  friendly_name: Download
+  icon: mdi:download
+sensor.speedtest_upload:
+  friendly_name: Upload
+  icon: mdi:upload
+sensor.speedtest_ping:
+  friendly_name: Ping
+  icon: mdi:webpack
+sensor.uptime:
+  friendly_name: HA Betriebszeit
+  icon: mdi:arrow-up-thick
+
+###Sonoff sensors
+sensor.sonoff_3028_version:
+  friendly_name: Tasmota Version
+sensor.sonoff_office_humidty:
+  friendly_name: Luftfeuchtigkeit - Büro
+  icon: mdi:water-percent
+  homebridge_hidden: false
+sensor.sonoff_office_temperature:
+  friendly_name: Temperatur - Büro
+  homebridge_hidden: false
+sensor.sonoff_rssi:
+  friendly_name: Signalstärke
+  icon: mdi:signal-variant
+sensor.sonoff_uptime:
+  friendly_name: Betriebszeit
+  icon: mdi:arrow-up-thick
+sensor.sonoff_vcc:
+  friendly_name: Versorgungsspannung
+  icon: mdi:flash
+
+sensor.wemosd1_room_temperature:
+  friendly_name: Temperatur - Zimmer
+  homebridge_hidden: false
+sensor.wemosd1_room_humidty:
+  friendly_name: Luftfeuchtigkeit - Zimmer
+  icon: mdi:water-percent
+  homebridge_hidden: false
 
 ###Google Sensors
 sensor.google_travel_time_dev1_driving:
@@ -48,8 +159,19 @@ sensor.google_travel_time_dev2_dynamic_home:
   friendly_name: Heimweg - dynamisch
   icon: mdi:google-circles-extended
 
-###Sensors
+###Other sensors
+sensor.fail2ban_homeassistant:
+  friendly_name: homeassistant
+  icon: mdi:shield
+sensor.fail2ban_nextcloud:
+  friendly_name: nextcloud
+  icon: mdi:shield
+sensor.fail2ban_sshd:
+  friendly_name: sshd
+  icon: mdi:shield
 sensor.mail:
+  homebridge_hidden: true
+sensor.ssl_cert_expiry:
   homebridge_hidden: true
 sensor.time:
   homebridge_hidden: true
@@ -59,91 +181,6 @@ sensor.uberx_time:
 sensor.uberx_price:
   friendly_name: uberX - Preis
   icon: mdi:uber
-sensor.sonoff_office_temperature:
-  friendly_name: Temperatur - Büro
-  homebridge_hidden: false
-sensor.sonoff_office_humidty:
-  friendly_name: Luftfeuchtigkeit - Büro
-  icon: mdi:water-percent
-  homebridge_hidden: false
-sensor.wemosd1_room_temperature:
-  friendly_name: Temperatur - Zimmer
-  homebridge_hidden: false
-sensor.wemosd1_room_humidty:
-  friendly_name: Luftfeuchtigkeit - Zimmer
-  icon: mdi:water-percent
-  homebridge_hidden: false
-sensor.sonoff_uptime:
-  friendly_name: Betriebszeit
-  icon: mdi:arrow-up-thick
-sensor.sonoff_rssi:
-  friendly_name: Signalstärke
-  icon: mdi:signal-variant
-sensor.sonoff_vcc:
-  friendly_name: Versorgungsspannung
-  icon: mdi:flash
-sensor.ssl_cert_expiry:
-  homebridge_hidden: true
-sensor.memory_use_percent:
-  friendly_name: RAM
-  icon: mdi:memory
-  homebridge_hidden: true
-sensor.disk_free_:
-  friendly_name: HDD
-  homebridge_hidden: true
-sensor.disk_use_percent_:
-  friendly_name: HDD
-  homebridge_hidden: true
-sensor.processor_use:
-  friendly_name: CPU
-  icon: mdi:desktop-classic
-  homebridge_hidden: true
-sensor.cpu_temperature:
-  friendly_name: CPU Temperatur
-  homebridge_hidden: true
-sensor.network_in_eth0:
-  friendly_name: Download
-  icon: mdi:download-network
-  homebridge_hidden: true
-sensor.network_out_eth0:
-  friendly_name: Upload
-  icon: mdi:upload-network
-  homebridge_hidden: true
-sensor.speedtest_download:
-  friendly_name: Download
-  icon: mdi:download
-sensor.speedtest_upload:
-  friendly_name: Upload
-  icon: mdi:upload
-sensor.speedtest_ping:
-  friendly_name: Ping
-  icon: mdi:webpack
-sensor.uptime:
-  friendly_name: HA Betriebszeit
-  icon: mdi:arrow-up-thick
-sensor.database_size_hass:
-  friendly_name: Datenbankgröße HA
-  icon: mdi:database
-sensor.database_size_nc:
-  friendly_name: Datenbankgröße NC
-  icon: mdi:database
-
-sensor.hass_version:
-  friendly_name: HA-Version
-sensor.sonoff_3028_version:
-  friendly_name: Tasmota Version
-sensor.fail2ban_nextcloud:
-  friendly_name: nextcloud
-  icon: mdi:shield
-sensor.fail2ban_homeassistant:
-  friendly_name: homeassistant
-  icon: mdi:shield
-sensor.fail2ban_sshd:
-  friendly_name: sshd
-  icon: mdi:shield
-#sensor.exchange_rate_1_btc:
-#  friendly_name: Kurs (1 BTC)
-#  homebridge_hidden: true
 
 ###Switches
 switch.mpd:
@@ -152,11 +189,6 @@ switch.mpd:
   #custom_ui_state_card: state-card-custom-toggle-url
   #url: !secret ympd_url
   friendly_name: MPD
-#switch.mopidy:
-#  homebridge_hidden: true
-#  icon: mdi:music-box
-#  custom_ui_state_card: state-card-custom-toggle-url
-#  url: !secret moped_url
 switch.wind_machine:
   icon: mdi:fan
   friendly_name: Ventilator
@@ -171,65 +203,11 @@ switch.braviatv_2:
   friendly_name: !secret tv_tv2_name
   homebridge_hidden: true
 
-###Input booleans
-input_boolean.fan_living_room:
-  homebridge_hidden: true
-#input_boolean.loop_livingcolors:
-#  friendly_name: Loop-Effekt
-#  icon: mdi:spotlight
-#input_boolean.weather:
-#  friendly_name: Wetter
-#  custom_ui_state_card: custom-weather-card
-#  config:
-    #weather: weather.dark_sky
-#    weather: weather.yweather
-#    sun: sun.sun
-
-###Sonoff Upgrade Scripts
-script.1515151540311:
-  can_cancel: false
-
-###Input number
-#input_number.btc_slider_low:
-#  friendly_name: BTC low
-#  icon: mdi:currency-btc
-#  unit_of_measurement: USD
-#input_number.btc_slider_high:
-#  friendly_name: BTC high
-#  icon: mdi:currency-btc
-#  unit_of_measurement: USD
-
-###Input select
-input_select.log_level:
-  icon: mdi:note-text
-input_select.hue_scenes:
-  friendly_name: hue Szene
-  icon: mdi:spotlight
-
-####Lights
-light.zimmer:
-  friendly_name: Zimmerlicht
-  custom_ui_state_card: state-card-custom-light
-light.stehlampe:
-  friendly_name: Stehlampe
-  custom_ui_state_card: state-card-custom-light
-light.deckenspots:
-  friendly_name: Deckenspots
-  custom_ui_state_card: state-card-custom-light
-light.buro:
-  friendly_name: Bürolicht
-light.wohnzimmer:
-  friendly_name: Wohnzimmerlicht
-
 ###Zones
 zone.work_1:
   friendly_name: !secret zone1_friendly_name
 zone.work_2:
   friendly_name: !secret zone2_friendly_name
-#!secret zone00_fullname:
-#  friendly_name: !secret zone00_friendly_name
-#!secret zone01_fullname:
-#  friendly_name: !secret zone01_friendly_name
 !secret zone1_fullname:
   friendly_name: !secret zone1_friendly_name
 !secret zone2_fullname:
